Added users database and validation as well as overall error handling
