# validation/validate.js
@@ -1,0 +1,52 @@
+const Validator = require('validatorjs');
+const validator = (body, rules, customMessages, callback) => {
+  const validation = new Validator(body, rules, customMessages);
+  validation.passes(() => callback(null, true));
+  validation.fails(() => callback(validation.errors, false));
+};
+
+const saveNote = (req, res, next) => {
+  const validationRule = {
+    title: 'required|string',
+    note: 'required|string'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
+const saveUser = (req, res, next) => {
+  const validationRule = {
+    firstName: 'required|string',
+    lastName: 'required|string',
+    email: 'required|email',
+    password: 'required|string|min:6',
+    favColor: 'string',
+    age: 'integer|min:0',
+    phone: 'string'
+
+  };
+    validator(req.body, validationRule, {}, (err, status) => {  
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+    });
+};
+
+module.exports = {
+  saveNote, saveUser
+};
